Добавить управление ролями дома
